modify jdk11 config